# OAT-Project

./: LICENSE  README.md
oat-evaluation/alarm4pi-cb/: .gitignore  Makefile  bcm_gpio.h  cfv_bellman.h  funclist.txt  gpio_polling.c  log_msgs.h  proc_helper.c  public_ip.c  pushover.c  pushover.h  pushover_conf.txt  util.c
oat-evaluation/alarm4pi-orig/: .gitignore  Makefile  README.md  alarm4pi.c  bcm_gpio.c  gpio_polling.c  gpio_polling.h  gpio_polling_orig.c  log_msgs.c  proc_helper.h  public_ip.h  test_combo.dis
oat-evaluation/light-controller-cb/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.back  cmake_install.cmake  create-archive.sh  funclist.txt  light-controller.c  light-controller.service  telldusd.service  tellstick.conf
oat-evaluation/light-controller-orig/: Makefile  README.md  kajarit-on.sh  light-controller-build.service  light-controller.c
oat-evaluation/rc-cb/: .gitignore  Makefile  funclist.txt  pi_pcm.c  vm
oat-evaluation/rc-orig/: .gitignore  Makefile  pi_pcm.c
oat-evaluation/roverpi-cb/: Makefile  funclist.txt  rovertcp.c  tcp.c
oat-evaluation/roverpi-orig/: Makefile  client  client.c  rovertcp.c  tcp.h
oat-evaluation/syringe-cb/: .gitignore  (+6 more)
oat-measurement-engine-ta/: .gitignore
oat-test/: .gitignore
oat-trampoline-lib/: .gitignore  Makefile  cfv_bellman.c  cfv_bellman.h  hello_world_ta.h  microbench.c  nova.c  nova.h  softboundcets-checks.c  softboundcets-wrappers.c  softboundcets.c  softboundcets.h  trampoline.S
oat-verify-engine/: .gitignore  Makefile  a.out.strip  gen_config.py  tracefile.txt  verify_engine
(+45 files in other folders)
